--- a/CFMMCD/Views/StoreProfile/Index.cshtml
+++ b/CFMMCD/Views/StoreProfile/Index.cshtml
@@ -229,8 +229,8 @@
             </div>
             <hr />
             <div class="container-fluid text-center">
-                <div class="col-lg-4">Store number</div>
-                <div class="col-lg-8">Store name</div>
+                <div class="col-lg-3"><strong>Store number</strong></div>
+                <div class="col-lg-9"><strong>Store name</strong></div>
             </div>
         </div>
         @using (Html.BeginForm())
