--- a/CFMMCD/Views/Account/EditAccount.cshtml
+++ b/CFMMCD/Views/Account/EditAccount.cshtml
@@ -48,7 +48,7 @@
 
         <div class="form-group">
             <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
-            <button type="submit" class="btn btn-default" name="command" value="Search">Delete</button>
+            <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
         </div>
     }
 </div>
@@ -64,7 +64,7 @@
             </div>
             <hr />
             <div class="container-fluid text-center">
-                <div class="col-lg-4">Username</div>
+                <div class="col-lg-3"><strong>Username</strong></div>
             </div>
         </div>
         @using (Html.BeginForm("EditAccount", "Account", FormMethod.Post, new { } ))
