--- a/CFMMCD/Views/MenuRecipe/Index.cshtml
+++ b/CFMMCD/Views/MenuRecipe/Index.cshtml
@@ -154,8 +154,8 @@
             </div>
             <hr />
             <div class="container-fluid text-center">
-                <div class="col-lg-4">Menu item code</div>
-                <div class="col-lg-8">Menu item name</div>
+                <div class="col-lg-4"><strong>Menu item code</strong></div>
+                <div class="col-lg-8"><strong>Menu item name</strong></div>
             </div>
         </div>
         @using (Html.BeginForm())
@@ -194,8 +194,8 @@
         </div>
         <hr />
         <div class="container-fluid text-center">
-            <div class="col-lg-4">Raw item code</div>
-            <div class="col-lg-8">Raw item name</div>
+            <div class="col-lg-4"><strong>Raw item code</strong></div>
+            <div class="col-lg-8"><strong>Raw item name</strong></div>
         </div>
         <div class="modal-body">
             @for (int i = 0; i < Model.RawItemList.Count(); i++)
