Added Switch functionality in raw item master Prepared Import functionality file upload Fixed minor bugs.

--- a/CFMMCD/Views/Account/EditAccess.cshtml
+++ b/CFMMCD/Views/Account/EditAccess.cshtml
@@ -33,6 +33,7 @@
     @using (Html.BeginForm("EditAccess", "Account", FormMethod.Post, new { }))
     {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(m => Model.AccountId)
         @Html.HiddenFor(m => Model.OldUsername, new { @Value = Model.OldUsername } )
         @Html.HiddenFor(m => Model.EditMode, new { @Value = true })
         @Html.HiddenFor(m => Model.Username, new { @Value = Model.Username })
