Added DB entry for item groups Added ViewModel for item groups

--- a/CFMMCD/Views/MenuRecipe/Index.cshtml
+++ b/CFMMCD/Views/MenuRecipe/Index.cshtml
@@ -168,9 +168,9 @@
                     {
                         ActiveInactive = "inactive";
                     }
-                    <button type="submit" class="modal-item-select tr-collapse @Model.MenuItemList[i].RIRMIC @Model.MenuItemList[i].MIMDSC @ActiveInactive" name="value" value=@Model.MenuItemList[i].RIRMIC>
+                    <button type="submit" class="modal-item-select tr-collapse @Model.MenuItemList[i].MIMMIC @Model.MenuItemList[i].MIMDSC @ActiveInactive" name="value" value=@Model.MenuItemList[i].MIMMIC>
                         <div class="col-lg-3">
-                            @Model.MenuItemList[i].RIRMIC
+                            @Model.MenuItemList[i].MIMMIC
                         </div>
                         <div class="col-lg-9">
                             @Model.MenuItemList[i].MIMDSC
