--- a/CFMMCD/Views/RawItemMaster/Index.cshtml
+++ b/CFMMCD/Views/RawItemMaster/Index.cshtml
@@ -208,7 +208,7 @@
                                     @foreach (MenuItem vm in Model.MenuItemList)
                                     {
                                         <tr>
-                                            <td>@vm.RIRMIC</td>
+                                            <td>@vm.MIMMIC</td>
                                             <td>@vm.MIMDSC</td>
                                         </tr>
                                     }
