--- a/CFMMCD/Views/ValueMeal/Index.cshtml
+++ b/CFMMCD/Views/ValueMeal/Index.cshtml
@@ -181,9 +181,9 @@
                 {
                     ActiveInactive = "inactive";
                 }
-                <button type="button" class="modal-item-select tr-collapse @Model.AllMenuItems[i].RIRMIC @Model.AllMenuItems[i].MIMDSC @ActiveInactive" name="value" value=@Model.AllMenuItems[i].RIRMIC data-dismiss="modal">
+                <button type="button" class="modal-item-select tr-collapse @Model.AllMenuItems[i].MIMMIC @Model.AllMenuItems[i].MIMDSC @ActiveInactive" name="value" value=@Model.AllMenuItems[i].MIMMIC data-dismiss="modal">
                     <div class="col-lg-4">
-                        @Model.AllMenuItems[i].RIRMIC
+                        @Model.AllMenuItems[i].MIMMIC
                     </div>
                     <div class="col-lg-8">
                         @Model.AllMenuItems[i].MIMDSC
