--- a/CFMMCD/Views/MenuItemMaster/Index.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/Index.cshtml
@@ -338,9 +338,9 @@
                     {
                         ActiveInactive = "inactive";
                     }
-                    <button type="submit" class="modal-item-select tr-collapse @Model.MenuItemMasterList[i].RIRMIC @Model.MenuItemMasterList[i].MIMDSC @ActiveInactive" name="value" value=@Model.MenuItemMasterList[i].RIRMIC>
+                    <button type="submit" class="modal-item-select tr-collapse @Model.MenuItemMasterList[i].MIMMIC @Model.MenuItemMasterList[i].MIMDSC @ActiveInactive" name="value" value=@Model.MenuItemMasterList[i].MIMMIC>
                         <div class="col-lg-4">
-                            @Model.MenuItemMasterList[i].RIRMIC
+                            @Model.MenuItemMasterList[i].MIMMIC
                         </div>
                         <div class="col-lg-8">
                             @Model.MenuItemMasterList[i].MIMDSC
